# policyengine-ve

./: Makefile  README.md  pyproject.toml
.beads/: issues.jsonl
.github/: bump_version.py
.github/workflows/: pr.yaml
changelog.d/: migrate-to-towncrier.changed.md  upgrade-python-3.14.changed.md
notebooks/: net_income_mtr.py
policyengine_ve/: __init__.py  entities.py  model_api.py  system.py
policyengine_ve.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
policyengine_ve/parameters/gov/: metadata.yaml  minimum_wage.yaml  tax_unit.yaml
policyengine_ve/parameters/gov/banavih/: metadata.yaml
policyengine_ve/parameters/gov/banavih/employee/: rate.yaml
policyengine_ve/parameters/gov/ivss/: metadata.yaml
policyengine_ve/parameters/gov/ivss/employee/: cap_multiplier.yaml  rate.yaml
policyengine_ve/parameters/gov/patria/: metadata.yaml
policyengine_ve/parameters/gov/patria/amor_mayor/: age_threshold_female.yaml  age_threshold_male.yaml  benefit_amount.yaml  income_threshold.yaml  metadata.yaml
policyengine_ve/parameters/gov/patria/bonuses/: metadata.yaml
policyengine_ve/parameters/gov/patria/bonuses/escolaridad/: amount.yaml  max_age.yaml  min_age.yaml
policyengine_ve/parameters/gov/patria/bonuses/lactancia/: amount.yaml  max_child_age.yaml
policyengine_ve/parameters/gov/patria/bonuses/public_sector_retiree/: amount.yaml
policyengine_ve/parameters/gov/patria/hogares/: amount.yaml
policyengine_ve/parameters/gov/seniat/: metadata.yaml
policyengine_ve/parameters/gov/seniat/income_tax/: deduction.yaml  metadata.yaml  rate.yaml
policyengine_ve/tests/: conftest.py  test_basic.py
policyengine_ve/tests/policy/: test_gran_mision_amor_mayor.py
policyengine_ve/tests/policy/ivss/: test_payroll_tax.yaml
policyengine_ve/tests/policy/patria/: test_bono_escolaridad.yaml  test_bono_lactancia.yaml  test_hogares_patria.yaml  test_sistema_patria_bonus.yaml
policyengine_ve/tests/policy/seniat/: test_income_tax.yaml
policyengine_ve/variables/gov/: __init__.py
policyengine_ve/variables/gov/ivss/: __init__.py  payroll_tax.py
policyengine_ve/variables/gov/patria/: __init__.py  bono_escolaridad.py  bono_lactancia.py  gran_mision_amor_mayor.py  hogares_patria_bonus.py  sistema_patria_bonus.py
policyengine_ve/variables/gov/seniat/: __init__.py  income_tax.py
policyengine_ve/variables/household/: __init__.py  carnet.py  income.py
policyengine_ve/variables/input/: benefits_eligibility.py  children.py  demographics.py  employment.py  hogares_eligibility.py  income.py
(+2 files in other folders)
